--- a/_layouts/projects.json
+++ b/_layouts/projects.json
@@ -1,9 +1,10 @@
 ---
 layout: default
 ---
-{% comment %}
-	This layout is used to by projects.md to display all of documents in
-	the _projects/ collection
-{% endcomment %}
+{% assign titles = site.projects | map: "title" %}
 
-hello
+{
+  "posts": [
+	{{ titles | join: "," }}
+  ]
+}
