--- a/_layouts/projects.json
+++ b/_layouts/projects.json
@@ -15,7 +15,8 @@
       ],
       "category": "{{ project.category }}",
       "client": "{{ project.client }}",
-      "location": "{{ project.location }}"
+      "location": "{{ project.location }}",
+      "featured": {% if project.featured %}true{% else %}false{% endif %}
     }{% if project != site.projects.last %},{% endif %}
     {% endfor %}
   ]
