--- a/_layouts/projects.json
+++ b/_layouts/projects.json
@@ -20,7 +20,7 @@
       "designer": "{{ project.designer }}",
       "members": "{{ project.members }}",
       "construction": "{{ project.construction }}",
-      "constructior": "{{ project.constructior }}",
+      "constructor": "{{ project.constructior }}",
       "construction_date": "{{ project.construction_date }}",
       "featured": {% if project.featured %}true{% else %}false{% endif %}
     }{% if project != site.projects.last %},{% endif %}
