--- a/_layouts/projects.json
+++ b/_layouts/projects.json
@@ -19,6 +19,7 @@
         "{{ tag }}"{% if tag != project.tag.last %},{% endif %}
         {% endfor %}
       ],
+      "content": "{{ project.content }}",
       "client": "{{ project.client }}",
       "location": "{{ project.location }}",
       "area": "{{ project.area }}",
