--- a/_layouts/projects.json
+++ b/_layouts/projects.json
@@ -21,7 +21,7 @@
         {% endfor %}
       ],
       "description": "{{ project.description }}",
-      "description_cn": "{{ project.description_cn | replace: "\n", "" }}",
+      "description_cn": "{{ project.description_cn | replace: "\\n", "" }}",
       "client": "{{ project.client }}",
       "client_cn": "{{ project.client_cn }}",
       "location": "{{ project.location }}",
