--- a/_layouts/projects.json
+++ b/_layouts/projects.json
@@ -20,7 +20,7 @@
         "{{ tag }}"{% if tag != project.tag.last %},{% endif %}
         {% endfor %}
       ],
-      "description_cn": "{{ project.description_cn | newline_to_br }}",
+      "description_cn": "{{ project.description_cn | escape | newline_to_br }}",
       "client": "{{ project.client }}",
       "client_cn": "{{ project.client_cn }}",
       "location": "{{ project.location }}",
